<resources>
    <string name="app_name">Q Novel - Project</string>

    <string name="setting">setting</string>
    <string name="Back">Back</string>

    <!-- Personal Name -->
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="penName">Pen Name</string>
    <string name="location">Location</string>

    <!-- Personal Account -->
    <string name="username">Username</string>
    <string name="account_ID">Account Id</string>
    <string name="followed">Followed</string>
    <string name="followers">followers</string>

    <!-- Services Name -->
    <string name="email">Email</string>
    <string name="google">Google</string>

    <!-- UI Content -->
    <string name="comment">Comment</string>
    <string name="title_Novel">Title</string>
    <string name="index">Index</string>
    <string name="page">Page</string>
    <string name="chapter">Chapter</string>

    <!-- Navigation -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="search">Search</string>

</resources>